# test_email

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
packaging/: build-deb.sh
packaging/debian/: postinst  prerm
packaging/examples/: env
packaging/systemd/: caln.service  caln@.service
src/: main.rs
